# pomodoro

./: README.md  app.config.ts  app.vue  dev.md  error.vue  index.html  nuxt.config.ts  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: nuxtjs.yml
assets/css/: main.css
components/: AppBackground.vue  AppHeader.vue  AppSidebar.vue  ColorSelect.vue
components/clock/: hour.vue  minute.vue  second copy.vue  second.vue
components/color-picker/: ColorPicker.vue  ColorPickerPill.vue
components/pomodoro/: clock.global.vue  default.global.vue  study.global.vue  study.vue
layouts/: blank.vue  default.vue
pages/: index.vue  policy.vue  seconds.vue  test.vue
public/: policy.html
public/.well-known/: assetlinks.json
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: VVideoBackground.vue
src/styles/: settings.scss  styles.scss
stores/: pomodoro.ts  settings.ts
utils/: index.ts
