[package]
name = "pomodoro"
version = "0.0.1"
description = "A Time Management Life Hack"
authors = ["Kieu Minh Canh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pomodoro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.11", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.14", features = [] }
tauri-plugin-shell = "2.0.0-beta.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.0.0-beta.3"

